// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`step 2: cirno import <fixtures>/foo 1`] = `
{
  "code": 0,
  "files": [
    {
      "content": "version: '1.0'
instances:
  - id: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
    name: unnamed
    created: '<timestamp>'
    updated: '<timestamp>'
",
      "path": "cirno.yml",
    },
    {
      "content": undefined,
      "path": "instances/cd5fbb72-8243-5ccf-b8ca-ceee993585f7/.yarn/releases/yarn-4.3.1.cjs",
    },
    {
      "content": undefined,
      "path": "instances/cd5fbb72-8243-5ccf-b8ca-ceee993585f7/.yarnrc.yml",
    },
    {
      "content": undefined,
      "path": "instances/cd5fbb72-8243-5ccf-b8ca-ceee993585f7/package.json",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Successfully imported instance cd5fbb72-8243-5ccf-b8ca-ceee993585f7.
",
}
`;

exports[`step 3: cirno export <#1> <exports>/foo.zip 1`] = `
{
  "code": 0,
  "files": [
    {
      "content": "version: '1.0'
instances:
  - id: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
    name: unnamed
    created: '<timestamp>'
    updated: '<timestamp>'
",
      "path": "cirno.yml",
    },
    {
      "content": undefined,
      "path": "instances/cd5fbb72-8243-5ccf-b8ca-ceee993585f7/.yarn/releases/yarn-4.3.1.cjs",
    },
    {
      "content": undefined,
      "path": "instances/cd5fbb72-8243-5ccf-b8ca-ceee993585f7/.yarnrc.yml",
    },
    {
      "content": undefined,
      "path": "instances/cd5fbb72-8243-5ccf-b8ca-ceee993585f7/package.json",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Successfully exported instance cd5fbb72-8243-5ccf-b8ca-ceee993585f7 to <exports>/foo.zip.
",
}
`;

exports[`step 4: cirno remove <#1> 1`] = `
{
  "code": 0,
  "files": [
    {
      "content": "version: '1.0'
instances: []
",
      "path": "cirno.yml",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Instance cd5fbb72-8243-5ccf-b8ca-ceee993585f7 is successfully removed.
",
}
`;

exports[`step 5: cirno import <exports>/foo.zip 1`] = `
{
  "code": 0,
  "files": [
    {
      "content": "version: '1.0'
instances:
  - id: 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19
    name: unnamed
    created: '<timestamp>'
    updated: '<timestamp>'
",
      "path": "cirno.yml",
    },
    {
      "content": undefined,
      "path": "instances/5ab7bff9-d000-5c3b-83ac-4c3c4296ee19/.yarn/releases/yarn-4.3.1.cjs",
    },
    {
      "content": undefined,
      "path": "instances/5ab7bff9-d000-5c3b-83ac-4c3c4296ee19/.yarnrc.yml",
    },
    {
      "content": undefined,
      "path": "instances/5ab7bff9-d000-5c3b-83ac-4c3c4296ee19/package.json",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Successfully imported instance 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19.
",
}
`;
